feat(Database): 优化数据库结构
优化数据库结构,支持外部调用前预初始化以替换实际运行代码